--- a/src/css/main.css
+++ b/src/css/main.css
@@ -26,13 +26,6 @@ ul {
     padding: 0;
 }
 
-.searchBar_ul_li {
-    padding: 5px;
-    display: block;
-    width: 100%;
-    border: 1px outset #0000AA;
-}
-
 .selected {
     background-color: #3c763d;
 }
@@ -48,31 +41,31 @@ ul {
     -ms-transition: all .3s ease-in-out;
     -o-transition: all .3s ease-in-out;
     z-index: 5;
-    background-color: grey;
-    overflow-y: scroll;
+    background-color: #449baf;
+    overflow-y: auto;
     padding: 0;
     margin: 0;
 
 }
-/*
-@media (min-width: 320px) {
-    #searchBar {
-        width: 100px;
-
-    }
-    footer {
-        font-size: 14px;
-        font-size: .5vw;
-    }
-}
-*/
-
 #markers {
     width: 100%;
 }
-#filter-markers {
-    width: 100%;
+
+/*.markers-container {
+    position: relative;
 }
+*/
+#filter-markers {
+    width: 100% !important;
+}
+
+.searchBar_ul_li {
+    padding: 5px;
+    display: block;
+    width: 100%;
+    border: 1px outset #0000AA;
+}
+
 
 .search-icon {
     padding: 10px 20px;
@@ -116,6 +109,21 @@ main {
     float: left;
 }
 
+.searchBar_ul_li_name a{
+    color: wheat;
+}
+.searchBar_inline {
+    display: inline-block;
+}
+
+.searchBar_ul_li_distance {
+    font-size: 1vw;
+}
+
+.searchBar_ul_li_duration {
+    font-size: 1vw;
+}
+
 #map {
     height: 100%;
     width: 100%;
@@ -124,12 +132,14 @@ main {
 
 footer {
     z-index: 100;
-    left: 10px;
+    /* left: 10px; */
     width: 100%;
     bottom: 0;
-    position: absolute;
+    left: 0;
+    position: fixed;
     border-top: 1px solid #ccc;
     font-size: 10px;
+    background-color: white;
 }
 
 footer span {
@@ -147,3 +157,26 @@ footer span {
     }
 }
 
+/*
+.gm-style-iw {
+    width: 350px !important;
+    top: 0 !important;
+    left: 0 !important;
+    border-radius: 2px 2px 0 0;
+}
+#infowindow-container .infowindow-name {
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-size: 22px;
+    font-weight: 400;
+    background-color: #48b5e9;
+    color: white;
+    padding: 10px;
+    margin: 1px;
+    border-radius: 2px 2px 0 0;
+}
+
+address {
+    white-space: pre;
+    text-align: left;
+}
+*/
