--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,4 @@
+@import url("http://fonts.googleapis.com/css?family=Marvel:400,700|Raleway|Open+Sans");
 html {
     height: 100%;
     width: 100%;
@@ -9,9 +10,10 @@ body {
     height: 100%;
     width: 100%;
     position: relative;
-    font-family: "Roboto", sans-serif;
+    /* font-family: "Roboto", sans-serif; */
+    font-family: "Raleway";
 }
-.clear-fix {
+.clearfix {
     overflow: auto;
 }
 
@@ -30,11 +32,58 @@ ul {
     background-color: #3c763d;
 }
 
-#searchBar {
-    width: 100px;
-    height: auto;
+p {
+    margin: auto;
+    padding-left: 5px;
+}
+
+header {
+    background-color: #286090;
+    color: white;
+    padding: 0;
+    padding-bottom: 4em;
+    border-bottom: 1px solid #000;
+    z-index: 1;
+    height: 50px;
+}
+
+#brand {
+    float: left;
+}
+
+.search-icon {
+    padding: 10px 20px;
+    background: #e5dac0;
+    color: #987d3e;
+    cursor: pointer;
     position: absolute;
-    left: 1px;
+    left: 80%;
+    top: 0;
+    margin: 6px 6px 0 0;
+    border-right: 5px;
+    z-index: 1;
+}
+
+main {
+    height: calc( 95% - 50px);
+    width: 100%;
+    position: absolute;
+}
+
+#left-sidebar {
+    float: left;
+    width: 10%;
+    height: 100%;
+    z-index: 5;
+    position: relative;
+    background-color: #b31e00;
+}
+
+#searchBar {
+    width: 100%;
+    height: auto;
+    /* position: absolute;
+    left: 1px; */
     transition: all .3s ease-in-out;
     -webkit-transition: all .3s ease-in-out;
     -moz-transition: all .3s ease-in-out;
@@ -67,48 +116,6 @@ ul {
 }
 
 
-.search-icon {
-    padding: 10px 20px;
-    background: #e5dac0;
-    color: #987d3e;
-    cursor: pointer;
-    position: absolute;
-    left: 80%;
-    top: 0;
-    margin: 6px 6px 0 0;
-    border-right: 5px;
-    z-index: 1;
-}
-
-p {
-    margin: auto;
-    padding-left: 5px;
-}
-
-header {
-    background-color: #286090;
-    color: white;
-    padding: 0;
-    padding-bottom: 4em;
-    border-bottom: 1px solid #000;
-    z-index: 1;
-    height: 50px;
-}
-
-main {
-    height: calc( 95% - 50px);
-    width: 100%;
-    position: absolute;
-}
-.wrapper-map {
-    height: 100%;
-    position: relative;
-}
-
-#brand {
-    float: left;
-}
-
 .searchBar_ul_li_name a{
     color: wheat;
 }
@@ -122,6 +129,12 @@ main {
 
 .searchBar_ul_li_duration {
     font-size: 1vw;
+}
+
+.wrapper-map {
+    height: 100%;
+    margin-left: 15%;
+    position: relative;
 }
 
 #map {
@@ -148,35 +161,11 @@ footer span {
 }
 
 @media (min-width: 640px) {
-    #searchBar {
-        width: 200px;
+    #left-sidebar {
+        width: 15%;
     }
 
     footer {
         font-size: 14px;
     }
 }
-
-/*
-.gm-style-iw {
-    width: 350px !important;
-    top: 0 !important;
-    left: 0 !important;
-    border-radius: 2px 2px 0 0;
-}
-#infowindow-container .infowindow-name {
-    font-family: 'Open Sans Condensed', sans-serif;
-    font-size: 22px;
-    font-weight: 400;
-    background-color: #48b5e9;
-    color: white;
-    padding: 10px;
-    margin: 1px;
-    border-radius: 2px 2px 0 0;
-}
-
-address {
-    white-space: pre;
-    text-align: left;
-}
-*/
