feat: created singleton google object.
refactored the cooperstownModel
refactored the place model.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -100,6 +100,12 @@ main {
     width: 100%;
 }
 
+.cooperstown-list-label {
+    background-color: #fff;
+    margin: 0;
+    padding: 5px 0 5px 0;
+}
+
 /*.markers-container {
     position: relative;
 }
