--- a/src/css/main.css
+++ b/src/css/main.css
@@ -149,14 +149,34 @@ main {
     position: absolute;
 }
 
+/* @credit: http://nicolasgallagher.com/pure-css-speech-bubbles/demo/ */
 .styled-infobox {
-    overflow: hidden;
-    position: absolute;
-    background-color: red;
-    border-radius: 5%;
-    min-height: 100px;
-    min-width: 100px;
-    padding: 10px 5px 10px 5px;
+    position:absolute;
+    padding:15px;
+    margin:1em 0 3em;
+    color:#000;
+    background:#f3961c; /* default background for browsers without gradient support */
+    /* css3 */
+    background:-webkit-gradient(linear, 0 0, 0 100%, from(#f9d835), to(#f3961c));
+    background:-moz-linear-gradient(#f9d835, #f3961c);
+    background:-o-linear-gradient(#f9d835, #f3961c);
+    background:linear-gradient(#f9d835, #f3961c);
+    -webkit-border-radius:10px;
+    -moz-border-radius:10px;
+    border-radius:10px;
+}
+
+.styled-infobox:after {
+    content:"";
+    position:absolute;
+    bottom:-14px; /* value = - border-top-width - border-bottom-width */
+    left: calc(100% / 2 - 14px);  /* controls horizontal position */
+    border-width:14px 14px 0; /* vary these values to change the angle of the vertex */
+    border-style:solid;
+    border-color:#f3961c transparent;
+    /* reduce the damage in FF3.0 */
+    display:block;
+    width:0;
 }
 
 .styled-infobox .styled-infobox-close {
