updated font url to https

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,4 +1,4 @@
-@import url("http://fonts.googleapis.com/css?family=Marvel:400,700|Raleway|Open+Sans");
+@import url("https://fonts.googleapis.com/css?family=Marvel:400,700|Raleway|Open+Sans");
 html {
     height: 100%;
     width: 100%;
