--- a/src/css/main.css
+++ b/src/css/main.css
@@ -149,9 +149,12 @@ main {
     position: absolute;
 }
 
+.infobox-container {
+    position: absolute;
+}
 /* @credit: http://nicolasgallagher.com/pure-css-speech-bubbles/demo/ */
 .styled-infobox {
-    position:absolute;
+    position:relative;
     padding:15px;
     margin:1em 0 3em;
     color:#000;
