--- a/src/css/main.css
+++ b/src/css/main.css
@@ -112,13 +112,11 @@ main {
 
 #left-sidebar {
     float: left;
-    width: 350px;
     height: 100%;
-    z-index: 5;
+    z-index: 10;
     position: relative;
     background-color: #b31e00;
     overflow-y: auto;
-    display: none;
 }
 
 #cooperstown-list {
@@ -201,51 +199,6 @@ main {
     overflow-y: scroll;
     max-height: 320px;
 }
-/* @credit: http://nicolasgallagher.com/pure-css-speech-bubbles/demo/ */
-.styled-infobox {
-    position:relative;
-    padding:15px;
-    margin:1em 0 3em;
-    color:#000;
-    background:#f3961c; /* default background for browsers without gradient support */
-    /* css3 */
-    background:-webkit-gradient(linear, 0 0, 0 100%, from(#f9d835), to(#f3961c));
-    background:-moz-linear-gradient(#f9d835, #f3961c);
-    background:-o-linear-gradient(#f9d835, #f3961c);
-    background:linear-gradient(#f9d835, #f3961c);
-    -webkit-border-radius:10px;
-    -moz-border-radius:10px;
-    border-radius:10px;
-}
-
-.styled-infobox:after {
-    content:"";
-    position:absolute;
-    bottom:-14px; /* value = - border-top-width - border-bottom-width */
-    left: calc(100% / 2 - 14px);  /* controls horizontal position */
-    border-width:14px 14px 0; /* vary these values to change the angle of the vertex */
-    border-style:solid;
-    border-color:#f3961c transparent;
-    /* reduce the damage in FF3.0 */
-    display:block;
-    width:0;
-    z-index: 150;
-}
-
-.styled-infobox-close {
-    position: absolute;
-    top: 0;
-    right: 0;
-    margin: 15px 0 15px 0;
-    font-size: 16px;
-    font-weight: 700;
-    background-color: #F3961C;
-    color: white;
-    border-radius: 2px;
-
-    cursor: pointer;
-    z-index: 100;
-}
 
 footer {
     z-index: 100;
@@ -268,7 +221,6 @@ footer span {
     z-index: 100;
     position: absolute;
     margin: auto;
-    width: 125px;
     max-width: 350px;
 }
 
@@ -297,7 +249,59 @@ footer span {
 
 }
 
-@media (min-width: 640px) {
+
+
+@media screen and (max-width: 400px) {
+
+    .left-sidebar-visible {
+        -webkit-transition: width 400ms ease-in-out;
+        -moz-transition: width 400ms ease-in-out;
+        -o-transition: width 400ms ease-in-out;
+        transition: width 400ms ease-in-out;
+        width: 350px;
+    }
+
+    .left-sidebar-removed {
+        -webkit-transition: width 400ms ease-in-out;
+        -moz-transition: width 400ms ease-in-out;
+        -o-transition: width 400ms ease-in-out;
+        transition: width 400ms ease-in-out;
+        width: 0;
+    }
+
+    #left-sidebar {
+        display: none;
+    }
+
+    .weather-visible {
+        -webkit-transition: width 400ms ease-in-out;
+        -moz-transition: width 400ms ease-in-out;
+        -o-transition: width 400ms ease-in-out;
+        transition: width 400ms ease-in-out;
+        display: block;
+        width: 125px;
+    }
+
+    .weather-removed {
+        -webkit-transition: width 400ms ease-in-out;
+        -moz-transition: width 400ms ease-in-out;
+        -o-transition: width 400ms ease-in-out;
+        transition: width 400ms ease-in-out;
+        display: none;
+        width: 0;
+    }
+
+    .weather-one-day {
+        display: none;
+    }
+
+    .menu-icon {
+        display: none;
+    }
+
+}
+
+@media screen and (min-width: 400px) {
     header {
 
     }
@@ -309,16 +313,58 @@ footer span {
         margin: auto 5px;
         /* padding: 5px; */
     }
+
+    .left-sidebar-visible {
+        -webkit-transition: width 400ms ease-in-out;
+        -moz-transition: width 400ms ease-in-out;
+        -o-transition: width 400ms ease-in-out;
+        transition: width 400ms ease-in-out;
+        width: 350px;
+    }
+
+    .left-sidebar-removed {
+        -webkit-transition: width 400ms ease-in-out;
+        -moz-transition: width 400ms ease-in-out;
+        -o-transition: width 400ms ease-in-out;
+        transition: width 400ms ease-in-out;
+        width: 0;
+    }
+
+
+    .weather-visible {
+        -webkit-transition: width 400ms ease-in-out;
+        -moz-transition: width 400ms ease-in-out;
+        -o-transition: width 400ms ease-in-out;
+        transition: width 400ms ease-in-out;
+        display: block;
+        width: 125px;
+    }
+
+    .weather-removed {
+        -webkit-transition: width 400ms ease-in-out;
+        -moz-transition: width 400ms ease-in-out;
+        -o-transition: width 400ms ease-in-out;
+        transition: width 400ms ease-in-out;
+        display: none;
+        width: 0;
+    }
+
     #left-sidebar {
         float: left;
-        width: 0;
         height: 100%;
         z-index: 10;
         position: relative;
         background-color: #b31e00;
         overflow-y: auto;
-        display: inherit;
+        display: block;
     }
+
+    #weather {
+        z-index: 100;
+        position: absolute;
+        margin: auto;
+    }
+
 
     footer {
         font-size: 14px;
